// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CardList component > renders ErrorFallback for network errors 1`] = `
<div>
  <button>
    Retry
  </button>
</div>
`;

exports[`CardList component > renders NoResultsFound for 404 error 1`] = `
<div>
  <div>
    No Results
  </div>
</div>
`;

exports[`CardList component > renders NoResultsFound if no characters are returned 1`] = `
<div>
  <div>
    No Results
  </div>
</div>
`;

exports[`CardList component > renders character cards when characters are fetched 1`] = `
<div>
  <div
    class="min-h-screen"
  >
    <div
      class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
      data-testid="card-list"
    >
      <div>
        Mock Rick Sanchez
      </div>
    </div>
  </div>
</div>
`;

exports[`CardList component > shows loader initially 1`] = `
<div>
  <div
    class="_loaderWrapper_59f4b9"
  >
    <div
      aria-label="Orange and tan hamster running in a metal wheel"
      class="_wheelAndHamster_59f4b9"
      data-testid="loader-spinner"
    >
      <div
        class="_wheel_59f4b9"
      />
      <div
        class="_hamster_59f4b9"
      >
        <div
          class="_hamsterBody_59f4b9"
        >
          <div
            class="_hamsterHead_59f4b9"
          >
            <div
              class="_hamsterEar_59f4b9"
            />
            <div
              class="_hamsterEye_59f4b9"
            />
            <div
              class="_hamsterNose_59f4b9"
            />
          </div>
          <div
            class="_hamsterLimb_59f4b9 _hamsterLimbFr_59f4b9"
          />
          <div
            class="_hamsterLimb_59f4b9 _hamsterLimbFl_59f4b9"
          />
          <div
            class="_hamsterLimb_59f4b9 _hamsterLimbBr_59f4b9"
          />
          <div
            class="_hamsterLimb_59f4b9 _hamsterLimbBl_59f4b9"
          />
          <div
            class="_hamsterTail_59f4b9"
          />
        </div>
      </div>
      <div
        class="_spoke_59f4b9"
      />
    </div>
  </div>
</div>
`;
